# group11C

./: .coverage 2  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXECUTIVE_SUMMARY_PEER_REVIEW.md  ML_IMPLEMENTATION_PLAN.md  PEER_REVIEW_REPORT.md  README.md  create_confusion_matrix_chart.py  create_wqi_chart.py  deep_dive_review.py  kaggle.json.example  normality_check.py  peer_review_analysis.py  pyproject.toml  pytest.ini  requirements.txt  train_models.py
.claude/: CLAUDE.md  plan.md
data/: environmental_justice_ml_results.csv  environmental_justice_results.csv  environmental_justice_wqi_results.csv
docs/: AGENT_12_VALIDATION.md  CHROME_DEVTOOLS_TEST_REPORT.md  ENVIRONMENTAL_JUSTICE_ANALYSIS.md  EXECUTIVE_SUMMARY_MODEL_RISK.md  PRESENTATION_PROMPT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  STATISTICAL_REVIEW_DOMAIN_CALIBRATION.md  US_MODEL_FAILURE_MODE_ANALYSIS.md  WQI_STANDARDS.md
portfoliosite/: index.html
scripts/: analyze_environmental_justice.py  analyze_environmental_justice_complete.py  build_us_training_samples.py  compare_models_fair.py  compare_models_fair.py,cover  run_tests_chunked.py  test_environmental_justice.py  test_environmental_justice_COMPLETE.py  train_us_calibration.py  train_us_calibration_from_samples.py  train_us_only_model.py  validate_calibration_robust.py
streamlit_app/: app.py
tests/: analyze_geographic_coverage_191.py  analyze_results_summary.py  conftest.py  conftest_mcp.py  geographic_coverage_191_results.json  phase4_backend_test_results.json  test_calculate_wqi_labels.py  test_classifier.py  test_regressor.py  (+35 more)
(+101 files in other folders)
