[project]
name = "water-quality-prediction"
version = "0.1.0"
description = "Environmental & Water Quality Prediction using ML"
authors = [
    {name = "Group 11C"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pgeocode (>=0.5.0,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
